cambindo el logo de los partners

--- a/index.html
+++ b/index.html
@@ -334,16 +334,16 @@
             <img src="img/fedex.png">
           </div>
           <div class="col-lg-4 text-center">
-            <img src="img/fedex.png">
+            <img src="img/utec.png">
           </div>
           <div class="col-lg-4 text-center">
-            <img src="img/fedex.png">
+            <img src="img/wasi.png">
           </div>
 
         </div>
         <div class="row">
           <div class="col-lg-4 text-center">
-            <img src="img/fedex.png">
+            <img src="img/Meetup.png">
           </div>
           <div class="col-lg-4 text-center">
             <img src="img/fedex.png">
