--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <!--Menú de opciones -->
     <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
       <div class="container">
-        <a class="navbar-brand js-scroll-trigger" href="#page-top">Perú Tech</a>
+        <a class="navbar-brand js-scroll-trigger" href="#page-top"><img src="img/logoperutech.jpg" style="width: 60%;height: 50px"></a>
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -52,51 +52,29 @@
     <header class="masthead">
       <div class="header-content">
         <div class="header-content-inner">
-          <br><br>
+          <br><br><br>
           <h1 id="homeHeading">¿ Apuestas con nosotros ?</h1>
           <hr>
            <p>Somos una comunidad de personas y organizaciones <br> que apuestan por crear tecnología en el país ! </p>
           <br>
-          <a class="btn btn-primary btn-xl js-scroll-trigger" href="">Inscríbete</a>
         </div>
+       <!-- <div class="header-footer">
+          <a class="btn btn-primary btn-xl js-scroll-trigger" href="">Inscríbete</a> 
+        </div>-->
       </div>
     </header>
     <!--Nosotros-->
     <section class="bg-primary" id="about">
       <div class="container">
         <div class="row">
-          <div class="col-lg-12 mx-auto text-center">
-            <h3 class="section-heading text-white">Últimos artículos en el blog </h3>
-            <br><br><br>
-            <div class="container">
-                <div class="row">
-                  <div class="col-lg-4 col-md-4">
-                    <h5 class="text-white">Título de la publicación</h5>
-                    <hr class="light">
-                     <p class="text-faded">Es simplemente el texto de relleno de las imprentas y archivos de texto. Lorem Ipsum ha sido el texto de relleno estándar de las industrias desde el año 1500, cuando un impresor (N. del T. persona que se dedica a la imprenta) </p>
-                  </div>
-                   <div class="col-lg-4 col-md-4">
-                     <h5 class="text-white">Título de la publicación</h5>
-                     <hr class="light">
-                     <p class="text-faded">Es simplemente el texto de relleno de las imprentas y archivos de texto. Lorem Ipsum ha sido el texto de relleno estándar de las industrias desde el año 1500, cuando un impresor (N. del T. persona que se dedica a la imprenta) </p>
-                  </div>
-                  <div class="col-lg-4 col-md-4">
-                      <h5 class="text-white">Título de la publicación</h5>
-                      <hr class="light">
-                      <p class="text-faded">Es simplemente el texto de relleno de las imprentas y archivos de texto. Lorem Ipsum ha sido el texto de relleno estándar de las industrias desde el año 1500, cuando un impresor (N. del T. persona que se dedica a la imprenta).</p>
-                  </div>
-                </div>
-            </div><br>
-            <div class="aboutimg">
-              <div class="header-content">
+          <div class="col-lg-12 mx-auto text-center ">
+              <div class="header-content aboutimg">
                 <div class="header-content-inner">
                   <br><br><br>
-                  <h1 id="homeHeading">NOSOTROS</h1><br>
+                  <h1>NOSOTROS</h1><br>
                   <p>Somos una comunidad tecnológica fortalecida con actores que creen productos relevantes <br>y que incentiven el desarrollo personal, profesional, económico y social del país.  </p>
                 </div>
               </div>        
-            </div>
-          <!--  <a class="btn btn-default btn-xl js-scroll-trigger" href="#services">Get Started!</a>-->
           </div>
         </div>
       </div>
@@ -321,7 +299,7 @@
     </section>
 
 <!--Partners-->
-    <section id="partners" class="bg-dark">
+    <section id="partners" class="bg-grey-light">
       <div class="container">
         <div class="row">
           <div class="col-lg-8 mx-auto text-center">
@@ -341,12 +319,13 @@
           </div>
 
         </div>
+        <br><br><br>
         <div class="row">
           <div class="col-lg-4 text-center">
             <img src="img/Meetup.png">
           </div>
           <div class="col-lg-4 text-center">
-            <img src="img/fedex.png">
+            <img src="img/unnamed.png" style="width: 150px;">
           </div>
           <div class="col-lg-4 text-center">
             <img src="img/fedex.png">
